logs/dag_id=defi_data_pipeline/run_id=manual__2024-04-07T12:24:57.031993+00:00/task_id=establish_database_conn/attempt=1.log
[2024-04-07T12:25:09.056+0000] {taskinstance.py:1957} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: defi_data_pipeline.establish_database_conn manual__2024-04-07T12:24:57.031993+00:00 [queued]>
[2024-04-07T12:25:09.081+0000] {taskinstance.py:1957} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: defi_data_pipeline.establish_database_conn manual__2024-04-07T12:24:57.031993+00:00 [queued]>
[2024-04-07T12:25:09.081+0000] {taskinstance.py:2171} INFO - Starting attempt 1 of 1
[2024-04-07T12:25:09.411+0000] {taskinstance.py:2192} INFO - Executing <Task(_PythonDecoratedOperator): establish_database_conn> on 2024-04-07 12:24:57.031993+00:00
[2024-04-07T12:25:09.419+0000] {standard_task_runner.py:60} INFO - Started process 36267 to run task
[2024-04-07T12:25:09.424+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'defi_data_pipeline', 'establish_database_conn', 'manual__2024-04-07T12:24:57.031993+00:00', '--job-id', '388', '--raw', '--subdir', 'DAGS_FOLDER/_etl.py', '--cfg-path', '/tmp/tmpp99sw0f1']
[2024-04-07T12:25:09.428+0000] {standard_task_runner.py:88} INFO - Job 388: Subtask establish_database_conn
[2024-04-07T12:25:09.450+0000] {logging_mixin.py:188} WARNING - /home/***/.local/lib/python3.8/site-packages/***/settings.py:195 DeprecationWarning: The sql_alchemy_conn option in [core] has been moved to the sql_alchemy_conn option in [database] - the old setting has been used, but please update your config.
[2024-04-07T12:25:09.496+0000] {task_command.py:423} INFO - Running <TaskInstance: defi_data_pipeline.establish_database_conn manual__2024-04-07T12:24:57.031993+00:00 [running]> on host aa86d21a7ebc
[2024-04-07T12:25:09.732+0000] {taskinstance.py:2481} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='defi_data_pipeline' AIRFLOW_CTX_TASK_ID='establish_database_conn' AIRFLOW_CTX_EXECUTION_DATE='2024-04-07T12:24:57.031993+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-04-07T12:24:57.031993+00:00'
[2024-04-07T12:25:09.746+0000] {base.py:83} INFO - Using connection ID 'defi_connection' for task execution.
[2024-04-07T12:25:09.753+0000] {taskinstance.py:2699} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/decorators/base.py", line 242, in execute
    return_value = super().execute(context)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 199, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 216, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/_etl.py", line 90, in establish_database_conn
    cursor.execute(qry)
psycopg2.errors.SyntaxError: syntax error at or near "{"
LINE 19:         FROM {{'data_frame'}};
                      ^

[2024-04-07T12:25:09.766+0000] {taskinstance.py:1138} INFO - Marking task as FAILED. dag_id=defi_data_pipeline, task_id=establish_database_conn, execution_date=20240407T122457, start_date=20240407T122509, end_date=20240407T122509
[2024-04-07T12:25:09.785+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 388 for task establish_database_conn (syntax error at or near "{"
LINE 19:         FROM {{'data_frame'}};
                      ^
; 36267)
[2024-04-07T12:25:09.837+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2024-04-07T12:25:09.891+0000] {taskinstance.py:3281} INFO - 0 downstream tasks scheduled from follow-on schedule check
